--- a/pages/main.html
+++ b/pages/main.html
@@ -1,20 +1,11 @@
-<?php
-
-require "utils/db_manager.php";
-
-
-function template($topic_ID)
-{
-}
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Homepage of the XENONMC Development Team. Meet our team members and connect to our growing community." />
+    <meta name="Description"
+        content="Homepage of the XENONMC Development Team. Meet our team members and connect to our growing community." />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" async>
     <!-- load sheet then javascript -->
@@ -24,14 +15,14 @@ function template($topic_ID)
     <link rel="shortcut icon" href="/assets/images/logo.jpg" type="image/x-icon">
 </head>
 
-
 <body class="bg-carbon">
     <section id="navbar">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <a class="navbar-brand" href="#">
-                <img src="/assets/images/logo.jpg" alt="XENONMC Logo: Green Lightning Bolt on a Black background">
+                <img src="/assets/images/logo.webp" alt="XENONMC Logo: Green Lightning Bolt on a Black background">
                 XForum</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#topNav"
+                aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="topNav">
@@ -43,14 +34,18 @@ function template($topic_ID)
                         <a class="nav-link" href="#teamMembers_centered">Our Team</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="contactDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Links & Contact</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="contactDropdown" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Links & Contact</a>
                         <div class="dropdown-menu bg-dark" aria-labelledby="contactDropdown">
-                            <a class="dropdown-item text-discord" href="https://discord.gg/jFEWYnDW6y"><i class="fab fa-discord"></i> Discord</a>
-                            <a class="dropdown-item text-github" href="https://github.com/xenonmc-dev"><i class="fab fa-github-square"></i> Github</a>
+                            <a class="dropdown-item text-discord" href="https://discord.gg/jFEWYnDW6y"><i
+                                    class="fab fa-discord"></i> Discord</a>
+                            <a class="dropdown-item text-github" href="https://github.com/xenonmc-dev"><i
+                                    class="fab fa-github-square"></i> Github</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="devDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dev Links</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="devDropdown" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Dev Links</a>
                         <div class="dropdown-menu bg-dark" aria-labelledby="devDropdown">
                             <button onclick="addOutput()" class="dropdown-item text-github">Pull Site</button>
                         </div>
@@ -100,7 +95,8 @@ function template($topic_ID)
                         </div>
                         <div class="card-body text-light bg-darker">
                             <div class="card-img">
-                                <img src="https://golca.org/resources/profile.jpg" alt="Lucas\' Profile Picture" class="centered rounded mx-auto d-block img-fluid img-thumbnail" width="40%">
+                                <img src="https://golca.org/resources/profile.jpg" alt="Lucas' Profile Picture"
+                                    class="centered rounded mx-auto d-block img-fluid img-thumbnail" width="40%">
                             </div>
                             <hr>
                             <h5 class="card-title">Lucas Burlingham</h5>
@@ -145,7 +141,8 @@ function template($topic_ID)
                                 <p class="card-text text-secondary">The All-In-One, Self-Hosted forum.</p>
                                 <small class="text-dark">Waiting on Framework...</small>
                                 <div class="progress text-dark">
-                                    <div class="progress-bar bg-success text-dark" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar bg-success text-dark" style="width: 0%;" aria-valuenow="0"
+                                        aria-valuemin="0" aria-valuemax="100">
                                         0%
                                     </div>
                                 </div>
@@ -160,7 +157,8 @@ function template($topic_ID)
                                 <p class="card-text text-secondary">Minecraft Java Server, all for you.</p>
                                 <small class="text-dark">Looking for Hosting Platform...</small>
                                 <div class="progress text-dark">
-                                    <div class="progress-bar bg-success text-light" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="1">0%
+                                    <div class="progress-bar bg-success text-light" style="width: 0%;" aria-valuenow="0"
+                                        aria-valuemin="0" aria-valuemax="1">0%
                                     </div>
                                 </div>
                             </div>
@@ -174,7 +172,8 @@ function template($topic_ID)
                                 <p class="card-text text-secondary">The driving force of all our services.</p>
                                 <small class="text-dark">In Progress...</small>
                                 <div class="progress text-dark">
-                                    <div class="progress-bar bg-success text-light" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar bg-success text-light" style="width: 80%;"
+                                        aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                         80%
                                     </div>
                                 </div>
@@ -191,7 +190,8 @@ function template($topic_ID)
                                 <p class="card-text text-secondary">Backend in MySQL</p>
                                 <small class="text-dark">Being designed...</small>
                                 <div class="progress text-dark">
-                                    <div class="progress-bar bg-success text-light" style="width: 60%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar bg-success text-light" style="width: 60%;"
+                                        aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                         60%
                                     </div>
                                 </div>
@@ -209,9 +209,8 @@ function template($topic_ID)
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="bg-dark" id="markdown"># Hey
-                            </div>
-                            <div class="bg-dark" id="markdown">## Hey, h2
+                            <div class="bg-dark markdown" id="markdown">
+                                # Hey
                             </div>
                         </div>
                     </div>
@@ -234,11 +233,13 @@ function template($topic_ID)
                                 <b>Links:</b>
                             </p>
                             <li>
-                                <a class="text-purple" href="https://discord.gg/jFEWYnDW6y"><i class="fab fa-discord"></i>
+                                <a class="text-purple" href="https://discord.gg/jFEWYnDW6y"><i
+                                        class="fab fa-discord"></i>
                                     Discord</a>
                             </li>
                             <li>
-                                <a class="text-light" href="https://github.com/xenonmc-dev"><i class="fab fa-github-square"></i> Github</a>
+                                <a class="text-light" href="https://github.com/xenonmc-dev"><i
+                                        class="fab fa-github-square"></i> Github</a>
                             </li>
                         </ul>
                     </div>
@@ -256,8 +257,10 @@ function template($topic_ID)
                                     </small>
                                 </td>
                                 <td>
-                                    <a href="https://www.codacy.com/gh/XENONMC-DEV/xenonmc.xyz/dashboard?utm_source=github.com&amp;utm_content=XENONMC-DEV/xenonmc.xyz">
-                                        <img src="https://app.codacy.com/project/badge/Grade/00257b7c0557468fb18de75285bbfe44" />
+                                    <a
+                                        href="https://www.codacy.com/gh/XENONMC-DEV/xenonmc.xyz/dashboard?utm_source=github.com&amp;utm_content=XENONMC-DEV/xenonmc.xyz">
+                                        <img
+                                            src="https://app.codacy.com/project/badge/Grade/00257b7c0557468fb18de75285bbfe44" />
                                     </a>
                                 </td>
                             <tr>
@@ -323,8 +326,7 @@ function template($topic_ID)
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="/utils/render_md.js">
-
+    <script type="text/javascript">
     </script>
 </body>
 
